* добавлен этот файл;
* добавлен класс соединений Wire, добавлен юнит-тест для Wire;

* введен дополнительный класс Succession, общий для Model и Successor. Теперь можно
  составлять композиции из Model;
* добавлен тест для композиции Model;
* небольшие изменения тестов - исправлен охват параметров шаблона;

* добавлена Doxygen - документация ко всем классам;

* удалена неиспользуемая переменная time_ и класса ANN (за время отвечает Учитель с переменной sampleCount_);
* дополнена документация;
* индексные сеттеры и геттеры класса ANN теперь final, их реализации вынесены в базовый класс;
* добавлен класс Reshape, меняющий форму тензора на другую, с таким же объемом;
* исправлен метод setTutor в дочерних классах - он теперь не выбрасывает исключения, и кое-где удален вообще;
* в Model добавлен вариативный метод setTutor позволяющий установить Учителя сразу для всех подсетей;

* добавлен класс SoftMax и юнит-тест для него;
* исправлен конструктор в ANN;

* удалены методы ANN::setMode()/getMode() как нефункциональные;
* еще несколько методов ANN стали чисто-виртуальными. Это немного раздувает код дочерних классов, за то улучашает читабельность;
* методы Learnable::batchBegin()/batchEnd() теперь final;
* добавлена разметка Doxygen в ANN.hpp;

