@@ -23,4 +23,9 @@
 * методы Learnable::batchBegin()/batchEnd() теперь final;
 * добавлена разметка Doxygen в ANN.hpp;
 
+* добавлена поддержка регуляризации;
+* регуляризация реализована в SimpleTutor;
+* удален метод DataHolder::update() и его тесты;
+* добавлены комментарии Doxygen;
+
 
